--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,27 @@
-== README
+# Rails + Ember.js (with the Ember CLI): Redux
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is my implementation of the fantastic blog tutorial by @tonycoco (many thanks :)
 
-Things you may want to cover:
+- [Part 1: The API and CMS](https://www.devmynd.com/blog/2014-7-rails-ember-js-with-the-ember-cli-redux-part-1-the-api-and-cms-with-ruby-on-rails)
+- [Part 2: The Front-End](https://devmynd.com/blog/2014-7-rails-ember-js-with-the-ember-cli-redux-part-2-the-front-end-with-ember-and-the-ember-cli)
 
-* Ruby version
+## Overview
 
-* System dependencies
+We will atempt to build a simple Rails API and Ember front-end application stack.
 
-* Configuration
+Dependenices...
 
-* Database creation
+- PostgreSQL
+- Ruby 2.1.1
+- Node.js and NPM
 
-* Database initialization
+Here's what we will be using...
 
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- [Rails](http://rubyonrails.org)
+  - [ActiveAdmin](http://activeadmin.info/)
+  - [Grape API](https://github.com/intridea/grape)
+    - [Swagger Documentation](http://swagger.wordnik.com) with [grape-swagger](https://github.com/tim-vandecasteele/grape-swagger)
+  - [ActiveModelSerializers](https://github.com/rails-api/active_model_serializers)
+- [Ember.js](http://emberjs.com)
+  - [Ember CLI](https://github.com/stefanpenner/ember-cli)
+  - ActiveModelSerializer Adapters
